Commit parte individual